[project]
name = "openlibrary-tag-analyzer"
version = "0.1.0"
description = "Exploring tags"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autocorrect==2.6.1",               # for spellchecking corrections
    "ciso8601==2.3.3",                  # for fast ISO date parsing
    "inflect==7.5.0",                   # for pluralization
    "lingua-language-detector==2.1.1",  # for language detection
    "orjson==3.11.4",                   # for fast JSON parsing
    "pyspellchecker==0.8.3",            # for spellchecking detection
    "requests",
    "textblob==0.19.0",                 # for spellchecking corrections
    # "numpy==2.3.4",
    # "scikit-learn==1.7.2",
    # "ray==2.51.1",
    # "ray[serve]==2.51.1",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",      # project administrava
    "pytest>=8.4.2",        # project administrava
    "pytest-cov>=7.0.0",    # project administrava
    "ty>=0.0.1a28",         # project administrava
]

# [tool.uv]
# Fast dependency management — works like poetry but leaner
# package = true

# [tool.pytest.ini_options]
# Pytest configuration
# addopts = "-v --maxfail=1 --disable-warnings"
# testpaths = ["."]
# python_files = ["*test.py"]

[tool.ruff]
# Ruff is both a linter and formatter (replaces black, flake8, isort, etc.)
line-length = 120
indent-width = 4
target-version = "py312"

# Enable common linting rules
# lint.select = [
  # "E",   # pycodestyle errors
  # "F",   # pyflakes
  # "I",   # import sorting
  # "B",   # bugbear
  # "UP",  # pyupgrade
  # "SIM", # simplify
  # "RUF"  # ruff-specific rules
# ]

# Optional: ignore overly strict or style-preference rules
# lint.ignore = [
  # "E501", # line too long (handled by formatter)
# ]

# Allow autofixes with `ruff check --fix`
# fix = true

# [tool.ruff.format]
# # Enable experimental ruff formatter
# quote-style = "double"
# indent-style = "space"
# line-ending = "auto"
# skip-magic-trailing-comma = false
# preview = true

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
